package fr.fges.action;

public interface Undoable {
    void undo();
}