package fr.fges.action;

public interface UndoableAction extends MenuAction {
    void undo();
}